--- a/app/src/main/resources/templates/admin/adminPartyListDetail.html
+++ b/app/src/main/resources/templates/admin/adminPartyListDetail.html
@@ -131,8 +131,7 @@
       </div>
     </div>
     <br>
-    <button type="button" class="btn btn-outline-secondary"><a th:href="@{partyBlock(no=${party.no})}">비활성화</a></button>
-    
+    <button type="button" class="btn btn-outline-secondary" style="border:none;"><a th:href="@{partyBlock(no=${party.no})}" class="btn btn-outline-secondary">비활성화</a></button>
   </form> 
   <!---------------------------- 상세보기 end ------------------------------>
 </div>
