--- a/app/src/main/resources/templates/mypage/myAuthForm.html
+++ b/app/src/main/resources/templates/mypage/myAuthForm.html
@@ -35,11 +35,8 @@
           <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myAuthForm}">개인 정보 수정</a>
           <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myPartyList}">파티게시물 관리</a>
           <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myFeedList}">피드게시물 관리</a>
-          <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myEventList}">이벤트게시물 관리</a>
           <a class="list-group-item list-group-item-action list-group-item-light p-3" href="">예약 내역</a>
-          <a class="list-group-item list-group-item-action list-group-item-light p-3" href="">팔로우 관리</a>
-          <a class="list-group-item list-group-item-action list-group-item-light p-3" href="">1:1 문의 내역</a>
-          <a class="list-group-item list-group-item-action list-group-item-light p-3" href="">주소지 관리</a>
+          <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myFollowList}">팔로우 관리</a>
         </div>
       </div>
       <!-- Page content wrapper-->
@@ -54,7 +51,7 @@
               <table>
                 <input type="password" id="password" name="password"/>
               </table>
-                <button type="button" id="passwordCheckBtn">확인하기</button>
+                <br><button type="button" class="btn btn-outline-secondary" id="passwordCheckBtn">확인하기</button>
               </form>
             </div>
           </div>
