--- a/app/src/main/resources/templates/mypage/myMain.html
+++ b/app/src/main/resources/templates/mypage/myMain.html
@@ -18,6 +18,7 @@
   <!-- Core theme CSS (includes Bootstrap)--> <!-- TODO 추가 - 1 -->
   <link href="/css/notice/noticeStyles.css" rel="stylesheet"/>
 
+
 </head>
 <body>
 <!-------------------------------구분선-------------------------->
@@ -44,55 +45,65 @@
       <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myAuthForm}">개인 정보 수정</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myPartyList}">파티게시물 관리</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myFeedList}">피드게시물 관리</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myEventList}">이벤트게시물 관리</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3"
          href="">예약 내역</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3"
-         href="">팔로우 관리</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3"
-         href="">1:1 문의 내역</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3"
-         href="">주소지 관리</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myFollowList}">팔로우 관리</a>
     </div>
   </div>
   <!-- Page content wrapper-->
   <div id="page-content-wrapper">
-    <div class="container-fluid">
+    <div class="container-fluid mypagemain rounded">
+      
+      <div class="row">
+      
       <h2 class="mt-4">마이페이지 메인화면</h2>
+      
+      
+      </div>
+      
 
       <div class="row">
-        <div class="col-4 border">
+        <div class="col-4 border rounded">
 
           <!-- 프로필 사진 & 자기 소개 글 -->
           <form action="updateProfile" id="updateProfileForm" method="post" enctype="multipart/form-data">
             <div>
+            <div class="line-2"></div>
               <table>
-                <th>프로필 사진</th>
+                <th class="fs-4 text-secondary">프로필 사진</th>
                 <tr>
-                  <td><img th:src="@{/member/files/{path}(path=${member.thumbnail})}" width="300px" height="280px"></td>
+                  <td>
+                    <img th:src="@{/member/files/{path}(path=${member.thumbnail})}" width="300px" height="280px">
+                  </td>
                 </tr>
                 <tr>
                   <td>
-                    <input name='files' type="file">
-                    <button type="submit" id="updateProfileBtn">수정</button>
+                    <label for="formFile" class="form-label"></label>
+                    <input name="files" class="form-control" type="file" id="formFile" multiple>
+                  </td>
+                  <td><br>
+                    <button type="submit" class="btn btn-outline-secondary" id="updateProfileBtn">수정</button>
                   </td>
                 </tr>
               </table>
             </div>
           </form>
+        <div class = "line-3"></div>
         </div>
-        <div class="col-8 border">
+        <div class="col-6 border rounded">
+        <div class = "line-2"></div>
+        
           <form action="updateIntro" id="updateIntroForm" method="post">
             <div>
               <table>
-                <th>자기 소개</th>
+                <th class="fs-4 text-secondary">자기 소개</th>
                 <tr>
-                  <td><textarea name='intro' type='text' th:text="${member.intro}" rows='11' cols='90'
+                  <td><textarea name='intro' type='text' th:text="${member.intro}" rows='12' cols='80'
                                 placeholder="자기소개를 입력해주세요."></textarea></td>
                 </tr>
                 <tr>
                   <td  style="text-align: right;">
-                    <button type="submit" id="updateIntroBtn">수정</button>
+                    <button type="submit" class="btn btn-outline-secondary" id="updateIntroBtn">수정</button>
                   </td>
                 </tr>
               </table>
@@ -100,6 +111,38 @@
           </form>
         </div>
       </div>
+      
+      <br>
+      <!-- 본인 작성 글 전체 리스트 -->
+      <div class="container" style="margin-left: -30px">
+        <div class="row">
+          <div class="col-12">
+            <table class="table">
+              <button type="button" class="btn btn-outline-secondary position-relative">
+                내가 작성한 전체 게시글
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                      th:each="board : ${boards}"
+                      th:text="${boardStat.count}">
+            <span class="visually-hidden">unread messages</span>
+                </span>
+              </button>
+              <thead>
+              <tr>
+                <th scope="col">게시판</th>
+                <th scope="col">제목</th>
+                <th scope="col">작성일</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr th:each="board : ${boards}">
+                <td th:text="${board.tableName}"></td>
+                <td th:if="${board.tableName == 'party'}"><a href="" th:href="@{/my/myPartyListDetail(no=${board.no})}" th:text="${board.title}"></a></td>
+                <td th:if="${board.tableName == 'feed'}"><a href="" th:href="@{/my/myFeedListDetail(no=${board.no})}" th:text="${board.title}"></a></td>
+                <td th:text="${board.date}"></td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
 
       <!-- 테이블 부트스트랩 end   -->
     </div>
