--- a/app/src/main/resources/templates/admin/adminFeedListDetail.html
+++ b/app/src/main/resources/templates/admin/adminFeedListDetail.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <br>
-      <button type="button" class="btn btn-outline-secondary"><a th:href="@{feedBlock(no=${feed.no})}">비활성화</a></button>
+      <button type="button" class="btn btn-outline-secondary" style="border:none;"><a th:href="@{feedBlock(no=${feed.no})}" class="btn btn-outline-secondary">비활성화</a></button>
 
       <!-- 테이블 부트스트랩 end   -->
     </div>
