--- a/app/src/main/resources/templates/mypage/myPartyListDetail.html
+++ b/app/src/main/resources/templates/mypage/myPartyListDetail.html
@@ -51,15 +51,9 @@
       <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myAuthForm}">개인 정보 수정</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myPartyList}">파티게시물 관리</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myFeedList}">피드게시물 관리</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myEventList}">이벤트게시물 관리</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3"
          href="">예약 내역</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3"
-         href="">팔로우 관리</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3"
-         href="">1:1 문의 내역</a>
-      <a class="list-group-item list-group-item-action list-group-item-light p-3"
-         href="">주소지 관리</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/my/myFollowList}">팔로우 관리</a>
     </div>
   </div>
   <!-- Page content wrapper-->
@@ -137,8 +131,8 @@
         </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-outline-secondary">변경</button>
-    <button type="button" class="btn btn-outline-secondary"><a th:href="@{myPartyDelete(no=${party.no})}">삭제</a></button>
+    <button type="submit" class="btn btn-outline-secondary">수정</button>
+    <button type="button" class="btn btn-outline-secondary" style="border:none;"><a th:href="@{myPartyDelete(no=${party.no})}" class="btn btn-outline-secondary">삭제</a></button>
     
   </form> 
   <!---------------------------- 상세보기 end ------------------------------>
